# aban-tether-assignment

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/app/: settings.py  urls.py
app/core/: admin.py  views.py
app/core/migrations/: 0001_initial.py  0002_rename_total_cost_order_cost.py
app/core/models/: __init__.py  currency.py  customer.py  order.py
app/core/serializers/: order_serializers.py
app/core/services/: __init__.py  cache_service.py  exchange_service.py  order_service.py
app/core/tests/: test_order.py
app/core/validators/: order_validators.py
docs/: erd.puml
env_files/: app.env.example  db.env.example
